# index.js
@@ -6,6 +6,7 @@ const swaggerUi = require('swagger-ui-express')
 const yamljs = require('yamljs')
 const swaggerDocument = yamljs.load('docs/swagger.yaml')
 
+
 require('dotenv').config()
 
 // Serve API documentation on /docs
@@ -19,6 +20,8 @@ app.use(express.json())
 app.use('/users', require('./routes/users'))
 
 app.use('/sessions', require('./routes/sessions'))
+
+app.use('/transactions', require('./routes/transactions'))
 
 mongoose.connect(process.env.MONGODB_URI, {}, function () {
     console.log('Connected to mongoDB')
